<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>demo_cpp_tf</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hazhao@siue.edu">haibo</maintainer>
  <license>Apache-2.0</license>


 <depend>rclcpp</depend>
 <depend> Eigen3</depend>
 <depend>interbotix_moveit_interface</depend>
 <depend>interbotix_moveit_interface_msgs</depend>
 <depend>moveit_core</depend>
 <depend>moveit_ros_planning</depend>
 <depend>moveit_ros_planning_interface</depend>
 <depend>geometry_msgs</depend>
 <depend>sensor_msgs</depend>
 <depend>eigen</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
